--- a/index.html
+++ b/index.html
@@ -1,72 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christine Douglas</title>
     <link rel="stylesheet" href="./styles.css" />
     <script src="https://kit.fontawesome.com/4c13ff49cc.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <section id="about-me">
-      <nav>
+</head>
+<body>
+  <section id="about-me">
+    <nav>
         <div class="personal__logo">Christine Douglas</div>
         <ul class="nav__link--list">
-          <li>
-            <a
-              href=""
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Languages</a
-            >
-          </li>
-          <li>
-            <a
-              href=""
-              class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              >Projects</a
-            >
-          </li>
-          <li>
-            <a href="" class="nav__link--anchor nav__link--anchor-primary"
-              >Contact</a
-            >
-          </li>
+            <li>
+                <a href="" class="
+                nav__link--anchor
+                link__hover-effect
+                link__hover-effect--black">Languages</a>
+            </li>
+            <li>
+                <a href="" class="
+                nav__link--anchor
+                link__hover-effect
+                link__hover-effect--black">Projects</a>
+            </li>
+            <li>
+                <a href="" class="
+                nav__link--anchor
+                nav__link--anchor-primary
+                ">Contact</a>
+            </li>
         </ul>
-      </nav>
-      <div class="flex flex-1">
+    </nav>
+    <div class="flex flex-1">
         <div class="about-me__info row">
-          <div class="about-me__info--container">
-            <figure class="about-me__picture--mask">
-              <img src="./assets/CAD.jpg" class="about-me__picture" alt="Picture of me" />
-            </figure>
-            <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Christine Douglas</span>👋
-            </h1>
-            <p class="about-me__info--para">
-              I'm a passionate <strong class="text--purple">front-end developer</strong> at the start of my journey,
-              focused on building beautiful, responsive, and professional
-              websites. I enjoy turning ideas into clean, user-friendly designs
-              and continuously learning new technologies to improve my craft.
-            </p>
-            <div class="about-me__links">
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-duotone fa-solid fa-envelope"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-duotone fa-regular fa-file"></i>
-                </a>
-            </div>  
+            <div class="about-me__info--container">
+                <figure class="about-me__picture--mask">
+                    <img src="./assets/CAD.jpg" class="about-me__picture" alt="Picture of me">
+                </figure>
+                <h1 class="about-me__info--title">Hi I'm <span class="text-purple">Christine Douglas</span> 👋
+                </h1>
+                <p class="about-me__info--para">
+                    I'm a passionate <strong class="text-purple">front-end developer</strong> at the start of my journey, focused on building beautiful, responsive, and professional websites. I enjoy turning ideas into clean, user-friendly designs and continuously learning new technologies to improve my craft.</p>
+                <div class="about-me__links">
+                    <a href="" class="about-me__link"></a>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-duotone fa-solid fa-envelope"></i>
+                    </a>
+                    <a href="" class="about-me__link">
+                        <i class="fa-duotone fa-regular fa-file"></i>
+                    </a>
+                </div>
+            </div>
+            <figure class="about-me__image--container">
+                <img src="./assets/undraw_websites.svg" alt=""></figure>        
         </div>
-        <figure class="about-me__img--container">
-            <img src="./assets/undraw_websites.svg" alt="">
-        </figure>
-      </div>
-    </section>
-  </body>
+    </div>
+  </section>  
+</body>
 </html>
