--- a/index.html
+++ b/index.html
@@ -58,9 +58,43 @@
                 </div>
             </div>
             <figure class="about-me__image--container">
-                <img src="./assets/undraw_websites.svg" alt=""></figure>        
+                <img src="./assets/undraw_websites.svg" class="about-me__img" alt=""></figure>        
         </div>
     </div>
   </section>  
+  <section id="languages">
+    <div class="container">
+        <div class="row">
+            <h1 class="section__title">This is my technology stack.</h1>
+            <div class="language__list">
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                    </figure>
+                    <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                    </figure>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                    </figure>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                    </figure>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
+                    </figure>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
 </body>
 </html>
