--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <nav>
         <div class="personal__logo">Christine Douglas</div>
         <ul class="nav__link--list">
-            <li>
-                <a href="" class="
+            <li class="nav__link">
+                <a href="#languages" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black">Languages</a>
             </li>
-            <li>
-                <a href="" class="
+            <li class="nav__link">
+                <a href="#projects" class="
                 nav__link--anchor
                 link__hover-effect
                 link__hover-effect--black">Projects</a>
             </li>
-            <li>
-                <a href="" class="
+            <li class="nav__link">
+                <a href="mailto:mzcdouglas52@gmail.com" class="
                 nav__link--anchor
                 nav__link--anchor-primary
                 ">Contact</a>
@@ -38,63 +38,177 @@
                 <figure class="about-me__picture--mask">
                     <img src="./assets/CAD.jpg" class="about-me__picture" alt="Picture of me">
                 </figure>
-                <h1 class="about-me__info--title">Hi I'm <span class="text-purple">Christine Douglas</span> 👋
+                <h1 class="about-me__info--title">Hi I'm <span class="text-purple">Christine Douglas</span><span class="wave">👋</span> 
                 </h1>
                 <p class="about-me__info--para">
                     I'm a passionate <strong class="text-purple">front-end developer</strong> at the start of my journey, focused on building beautiful, responsive, and professional websites. I enjoy turning ideas into clean, user-friendly designs and continuously learning new technologies to improve my craft.</p>
                 <div class="about-me__links">
-                    <a href="" class="about-me__link"></a>
-                        <i class="fa-brands fa-linkedin-in"></i>
+                    <a href="https://www.linkedin.com/in/christineayakodouglas" target="_blank" class="about-me__link">
+                      <i class="fa-brands fa-linkedin-in"></i>  
                     </a>
-                    <a href="" class="about-me__link">
+                    <a href="https://github.com/mzcdouglas54" target="_blank" class="about-me__link">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="" class="about-me__link">
-                        <i class="fa-duotone fa-solid fa-envelope"></i>
+                    <a href="mailto:mzcdouglas52@gmail.com" target="_blank" class="about-me__link">
+                      <i class="fa-duotone fa-solid fa-envelope"></i>  
                     </a>
-                    <a href="" class="about-me__link">
-                        <i class="fa-duotone fa-regular fa-file"></i>
+                    <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
+                       <i class="fa-duotone fa-regular fa-file"></i> 
                     </a>
                 </div>
             </div>
-            <figure class="about-me__image--container">
-                <img src="./assets/undraw_websites.svg" class="about-me__img" alt=""></figure>        
-        </div>
-    </div>
-  </section>  
-  <section id="languages">
-    <div class="container">
-        <div class="row">
-            <h1 class="section__title">This is my technology stack.</h1>
-            <div class="language__list">
-                <div class="language">
-                    <figure class="language__img--wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                    </figure>
-                    <div class="language">
-                    <figure class="language__img--wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                    </figure>
-                </div>
-                <div class="language">
-                    <figure class="language__img--wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                    </figure>
-                </div>
-                <div class="language">
-                    <figure class="language__img--wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                    </figure>
-                </div>
-                <div class="language">
-                    <figure class="language__img--wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="" class="language__img">
-                    </figure>
-                </div>
-                </div>
-            </div>
+            <figure class="about-me__img--container">
+                <img src="./assets/undraw_programming_j1zw.svg" class="about-me__link" alt="">
+            </figure>
         </div>
     </div>
   </section>
+  <section id="languages">
+    <div class="container">
+        <div class="row">
+            <h1 class="section__title">This is my <span class="text-purple">technology stack</span></h1>
+            <div class="language__list">
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" class="language__img">
+                    </figure>
+                    <span class="language__name">HTML</span>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" class="language__img">
+                    </figure>
+                    <span class="language__name">CSS</span>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" class="language__img">
+                    </figure>
+                    <span class="language__name">JavaScript</span>
+                </div>
+                <div class="language">
+                    <figure class="language__img--wrapper">
+                        <img src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png" class="language__img">
+                    </figure>
+                    <span class="language__name">React</span>
+                </div>
+            </div>
+    </div>
+  </section>  
+  <section id="projects">
+    <div class="container">
+        <div class="row">
+            <h1 class="section__title">Here are some of my <span class="text-purple">projects</span></h1>
+            <ul class="project__list">
+                <li class="project">
+                    <div class="project__wrapper">
+                        <img src="./assets/loopit.png" class="project__img" alt="car subscription project">
+                        <div class="project__description">
+                            <h3 class="project__description--title">Car Sales Project</h3>
+                            <h4 class="project__description--sub-title">
+                            HTML, CSS, JavaScript, Vue, Vuex
+                            </h4>
+                        <p class="project__description--para">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus debitis voluptatum alias adipisci porro deleniti ex inventore, doloremque voluptatem ullam odit fugiat mollitia suscipit beatae et iure saepe quo nihil repellat deserunt ea nostrum. Consequuntur at aperiam illo doloremque voluptatum. Aut molestiae in vitae esse distinctio rem perferendis sunt voluptatem.
+                        </p> 
+                        <div class="project__description--links">
+                            <a href="https://github.com/mzcdouglas54/3.1-E-Portfolio" target="_blank"class="project__description--link">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="https://github.com/mzcdouglas54/3.1-E-Portfolio" target="_blank" class="project__description--link">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>   
+
+                        </div>
+                    </div>
+                </li>
+                <li class="project">
+                    <div class="project__wrapper">
+                        <img src="./assets/loopit.png" class="project__img" alt="car subscription project">
+                        <div class="project__description">
+                            <h3 class="project__description--title">Car Sales Project</h3>
+                            <h4 class="project__description--sub-title">
+                            HTML, CSS, JavaScript, Vue, Vuex
+                            </h4>
+                        <p class="project__description--para">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus debitis voluptatum alias adipisci porro deleniti ex inventore, doloremque voluptatem ullam odit fugiat mollitia suscipit beatae et iure saepe quo nihil repellat deserunt ea nostrum. Consequuntur at aperiam illo doloremque voluptatum. Aut molestiae in vitae esse distinctio rem perferendis sunt voluptatem.
+                        </p> 
+                        <div class="project__description--links">
+                            <a href="https://github.com/mzcdouglas54/3.1-E-Portfolio" target="_blank"class="project__description--link">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="https://github.com/mzcdouglas54/3.1-E-Portfolio" target="_blank" class="project__description--link">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>   
+
+                        </div>
+                    </div>
+                </li>
+                <li class="project">
+                    <div class="project__wrapper">
+                        <img src="./assets/loopit.png" class="project__img" alt="car subscription project">
+                        <div class="project__description">
+                            <h3 class="project__description--title">Dashboard</h3>
+                            <h4 class="project__description--sub-title">
+                            HTML, CSS, JavaScript, Vue, Vuex
+                            </h4>
+                        <p class="project__description--para">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus debitis voluptatum alias adipisci porro deleniti ex inventore, doloremque voluptatem ullam odit fugiat mollitia suscipit beatae et iure saepe quo nihil repellat deserunt ea nostrum. Consequuntur at aperiam illo doloremque voluptatum. Aut molestiae in vitae esse distinctio rem perferendis sunt voluptatem.
+                        </p> 
+                        <div class="project__description--links">
+                            <a href="https://github.com/mzcdouglas54/3.1-E-Portfolio" target="_blank"class="project__description--link">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a href="https://github.com/mzcdouglas54/3.1-E-Portfolio" target="_blank" class="project__description--link">
+                                <i class="fa-solid fa-link"></i>
+                            </a>
+                        </div>   
+
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+  </section>
+  <footer>
+    <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+            <figure class="footer__logo ">
+                <img src="https://api.sherbert.cimpress.io/v3/assets/pDcljuxX9MhlmCJ79qyor~200/versions/1/webPreview?signature=76e877afd29c806eecbb9824d64b0b989e0895b9" class="footer__logo--img" alt="">
+            </figure>
+            <span class="footer__logo--popup">
+                Top
+                <i class="fas fa-arrow-up"></i>
+            </span>
+        </a>
+        <div class="footer__social--list">
+            <a href="https://www.linkedin.com/in/christineayakodouglas" target="_blank" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white">LinkedIn</a>
+            <a href="https://github.com/mzcdouglas54" target="_blank" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white">Github</a>
+            <a href="mailto:mzcdouglas52@gmail.com" target="_blank" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white">Email</a>
+            <a href="./assets/Example Resume.pdf" target="_blank" class="
+            footer__social--link
+            link__hover-effect
+            link__hover-effect--white
+            " target="_blank">Resume</a>
+        </div>
+        <div class="footer__copyright">Copyright © 2025 Christine Douglas</div>
+    </div>
+    
+  </footer>
+  
 </body>
+
 </html>
